Working tests and command processor.
Various

Run via spring boot to get autoconfiged connection pooling and r2dbc.
Add a loop that operates similar to the command processor.

wip for saving event poc

working with transactions

cleanup deps

format

add command fun to debug out of order processing

working in order processing

correctly loops forever

format

format and enable logging

use a generic decider in the command processor

use scan to calculate state as it goes along. Also format cause I am a dumdum

working with infinite stream via a 3 second loop

use zip to avoid needing to pass the command through

setup initial state

do retry on entire all commands generation because otherwise the intervals keep ticking without processing causing a backpressure failure

move infinite stream logic to repo, format

parameterize batch size

commit some test ideas

generate commands at random rate + format

set times in db and format

working comparisons with slowly generated data

add some notes

some perf improvements

use pub/sub which lowers best case and average case considerably

flailing at getting logs

minor tweaks

add working tests against testcontainers

update notes in readme